# shuttle-cronjobs-rust

./: Cargo.toml
src/: crontjobs.rs  main.rs
