[package]
name = "rust-crontjobs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
apalis = { version = "0.4.9", features = ["cron", "postgres", "extensions", "retry"] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
serde = { version = "1.0.197", features = ["derive"] }
shuttle-runtime = "0.39.0"
shuttle-shared-db = { version = "0.39.0", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1"
tower = "0.4.13"
